--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+          xmlns:tools="http://schemas.android.com/tools"
           package="com.example.gorix134.musicplayer">
+
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
 
     <application
             android:allowBackup="true"
@@ -8,15 +11,11 @@
             android:label="@string/app_name"
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
-            android:theme="@style/AppTheme">
-        <activity android:name=".DirectoryChoosingActivity"
-                  android:theme="@style/Theme.Design.NoActionBar">
-
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-                <category android:name="android.intent.category.LAUNCHER"/>
-            </intent-filter>
-
+            android:theme="@style/AppTheme"
+            tools:ignore="GoogleAppIndexingWarning"> <!-- added ignore attribute -->
+        <activity
+                android:name=".activities.ButtonActivity"
+                android:theme="@style/Theme.Design.NoActionBar">
         </activity>
 
         <service
@@ -28,8 +27,19 @@
             </intent-filter>
         </service>
 
-        <activity android:name=".PlayerActivity">
+        <activity
+                android:name=".activities.PlayerActivity"
+                android:theme="@style/Theme.Design.NoActionBar">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
+
+                <category android:name="android.intent.category.LAUNCHER"/>
+            </intent-filter>
         </activity>
+
+        <activity android:name=".activities.ChooseFolderActivity">
+        </activity>
+
     </application>
 
 </manifest>
