--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,6 +21,11 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
+    compileOptions {
+        sourceCompatibility 1.8
+        targetCompatibility 1.8
+    }
 }
 
 dependencies {
@@ -38,4 +43,6 @@ dependencies {
     implementation 'com.google.android.exoplayer:exoplayer-core:2.9.0'
     implementation 'com.google.android.exoplayer:exoplayer-dash:2.9.0'
     implementation 'com.google.android.exoplayer:exoplayer-ui:2.9.0'
+    implementation 'com.google.android.exoplayer:exoplayer-hls:2.9.0'
+    implementation 'com.google.android.exoplayer:exoplayer-smoothstreaming:2.9.0'
 }
