Добавил выбор трека по клику

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,7 +36,7 @@
         </receiver>
 
         <activity
-                android:name=".activities.PlayerActivity"
+                android:name=".activities.player.PlayerActivity"
                 android:theme="@style/Theme.AppCompat.Light.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
